# AGER

./: .gitignore  Cargo.toml  README.md  build.rs
res/shaders/: default.fs  default.vs
src/: main.rs  window.rs
src/gameboy/: bin_utils.rs  cpu.rs  debugger.rs  gpu.rs  memory.rs  mod.rs  registers.rs  timer.rs
src/gameboy/debugger/: mod.rs
src/gameboy/debugger/gdb_server/: mod.rs  rdb_packet.rs
src/gameboy/mbc/: mbc0.rs  mbc1.rs  mod.rs
src/views/logic/: mod.rs
src/views/logic/debugger/: imp.rs  mod.rs
src/views/logic/game/: mod.rs
src/views/template/debugger/: window.ui
