[package]
name = "age"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin_sleep = "^0"
glium = "^0.31.0"
gl_loader = "^0.1.2"
gtk4_glium = "0.1.1"
gtk4 = "0.4.8"
gio = "0.15.12"
cgmath = "0.18.0"
glib-build-tools = "0.19.0"

[build-dependencies]
glib-build-tools = "0.19.0"
